--- a/backend/deno.json
+++ b/backend/deno.json
@@ -1,8 +1,8 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --watch --allow-net --allow-read --allow-write --allow-env --allow-sys main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
   }
-} 
+}
